# n-plus-practice

./: .dockerignore  .gitignore  Makefile  PLAN-NARRATION.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-video.txt  requirements.txt
catalog/: admin.py  dataloaders.py  models.py  schema.py
catalog/management/commands/: check_queries.py  seed_db.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
exercises/: README.md
exercises/01_basic/: BRIEF.md  solution.md
exercises/02_intermediate/: BRIEF.md  solution.md
exercises/03_advanced/: BRIEF.md  solution.md
tests/: conftest.py  test_query_counts.py
walkthroughs/: __main__.py  cli.py
walkthroughs/compositor/: compose.py
walkthroughs/narrator/: audit_pronunciation.py  generate.py  pronunciation.py  timing.py
walkthroughs/renderer/: __init__.py  code_display.py  diff_scene.py  scenes.py  terminal_scene.py  theme.py
walkthroughs/specs/: 01_basic.yaml  02_intermediate.yaml  03_advanced.yaml
